--- a/reset.css
+++ b/reset.css
@@ -24,7 +24,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
+    background: #eeeeee;
 }
 ol, ul {
 	list-style: none;
